package Netbat;

message Addr {
	required uint32	ip 		= 1;
	required uint32	port	= 2;
}

message Msg {
	enum OpCode {
		INFO		= 1;
		RESET		= 2;

		HP0			= 65;
		HP1			= 66;
	}

	enum HostType {
		UNKNOWN			= 1;
		OPEN 			= 2;
		FILTER	 		= 3;
		NAT				= 4;
	}

	enum ErrType {
		NONE					= 1;
		UNSPECIFIED				= 2;
		PEER_UNAVAILABLE		= 3;
	}

	optional OpCode 	op_code				= 1;
	repeated OpCode 	supported_ops 		= 2;
	optional HostType 	host_type 			= 3;
	optional string 	err 				= 4;
	optional ErrType	err_type			= 5;
	optional Addr		addr				= 6;
	optional string 	token				= 7;
}